9media add link to contentlist

--- a/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
+++ b/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
@@ -1,9 +1,10 @@
 <div class="row">
     
     <div class="col-xs-12 col-md-6 image_container" 
+        ng-repeat="content in contentListCtrl.contents track by $index"
         ng-class="{'pair': $even}" 
         style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
-        ng-repeat="content in contentListCtrl.contents track by $index">
+        ng-click="go('https://www.google.fr')">
 
         <h2 class="img_title">
             <div>{{content.fields.text.split('§')[0].toUpperCase()}}</div>
