9media add link to contentlist

--- a/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
+++ b/theme/9media/templates/blocks/contentList/LienVersPageTemplate.html
@@ -3,8 +3,8 @@
     <div class="col-xs-12 col-md-6 image_container" 
         ng-repeat="content in contentListCtrl.contents track by $index"
         ng-class="{'pair': $even}" 
-        style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')">
-        <a class="link_container" href="www.google.fr">
+        style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
+        ng-click="goToPage('www.google.fr')">
 
             <h2 class="img_title">
                 <div>{{content.fields.text.split('§')[0].toUpperCase()}}</div>
@@ -15,7 +15,6 @@
                 {{content.fields.summary.toUpperCase()}}
             </p>
 
-        </a>
     </div>
 
 </div>
