design css fix 9media

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -294,14 +294,14 @@ p.expertise_icon {
     display: none;
 }
 
-p.expertise_icon:after, p.expertise_icon:before {
+/* p.expertise_icon:after, p.expertise_icon:before {
     content: "";
     display: inline-block;
     border-top: 2px solid #9c9c9c;
     width: 57px;
     margin: 0 1rem;
     transform: translateY(15px);
-}
+} */
 
 img.expertise_icon {
     width: 50px;
