--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.1.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.1.html
@@ -1,89 +1,37 @@
-<div class="program_row_container">
+<div class="row">
 
-    <div class="program_col_container"
-        ng-repeat="content in contentListCtrl.contents track by $index">
-        
-        <img class="img-responsive no-margin program" ng-if="content.fields.image"
-                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'200px',height:'150px',mode:'crop'}) }}"
-                onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=200px&height=150px&mode=crop'"
-                alt="{{ content.fields.text }}"/> 
-
-        <div class="program_text">
-            <h3>
-                <a ng-if="!fieldEditMode"  ng-href="{{ !fieldEditMode ? content.contentLinkUrl : ''}}">{{content.fields.text}}</a>
-                <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
-            </h3>
-
-            <p ng-if="!contentListCtrl.titleOnly">
-                {{content.fields.summary}}
-                <rubedo-field ng-if="fieldEditMode" field="{{content.type.summary}}"></rubedo-field>
-            </p> 
+        <div class="media-body" ng-class="{contentbox: rubedo.current.user &amp;&amp; rubedo.current.user.rights.canEdit}"><!-- ngIf: !fieldEditMode --><a ng-if="!fieldEditMode" ng-href="/fr/accueil/nos-propositions/priere-et-montagne/5bc9c6f1396588944af179f4/priere-et-montagne-du-29-septembre-au-5-octobre-2019" target="_self" class="ng-scope" href="/fr/accueil/nos-propositions/priere-et-montagne/5bc9c6f1396588944af179f4/priere-et-montagne-du-29-septembre-au-5-octobre-2019">
+            <!-- Icône "X" pour mettre offline le contenu -->
+            <!-- ngIf: rubedo.current.user && rubedo.current.user.rights.canEdit -->
             
-            <div class="program_date">{{content.fields.dateDebutPretty}}</div>
-        </div>   
+            <h4 class="list-item-title capital"><span class="ng-binding">Prière et Montagne du 29 septembre au 5 octobre 2019 <!-- ngIf: contentListCtrl.isFOContributeMode --></span>
+            </h4>
 
-    </div>
+            <div class="list-item-img"><!--ng-class="{'no-img':!content.fields.image}"-->
+                <!-- si le contenu a une image, on l'affiche dans la vignette -->
+                <!-- ngIf: content.fields.image --><img class="media-object pull-left ng-scope" ng-if="content.fields.image" ng-src="/dam?media-id=595678643965880108178183&amp;width=400px&amp;height=266px&amp;mode=crop" alt="Prière et Montagne du 29 septembre au 5 octobre 2019" src="/dam?media-id=595678643965880108178183&amp;width=400px&amp;height=266px&amp;mode=crop"><!-- end ngIf: content.fields.image -->
+                <!-- si le contenu n'a pas d'image définie, on affiche une image par défaut -->
+                <!-- ngIf: !content.fields.image -->
+            </div>
+
+            <!-- ngIf: content.fields.positionName && !content.fields.subTitle --><h4 class="list-item-title date-lieu capital ng-scope" ng-if="content.fields.positionName &amp;&amp; !content.fields.subTitle">
+                <!-- ngRepeat: taxo in content.taxonomy['555f3bc445205edc117e689b'] -->
+                <span>
+                    <!-- ngIf: !blockConfig.hidePlace --><span ng-if="!blockConfig.hidePlace" class="ng-binding ng-scope">Maison d'accueil Kloster Bethanien</span><span ng-if="!blockConfig.hidePlace &amp;&amp; content.fields.dateDebut" class="ng-scope"> - </span>
+                    <!-- ngIf: content.fields.dateDebut --><time ng-if="content.fields.dateDebut" class="ng-binding ng-scope">29 sept.-5 oct. 2019</time>
+                </span>
+            </h4>
+            </a>
+        </div>
 
 </div>
 
 <style>
-.program_date {
-    font-variant: small-caps;
-    background: #467098;
-    width: 110px;
-    height: 20px;
-    line-height: 27px;
-    font-size: 1.4rem;
+div.card.proposition {
+    max-width: 400px;
     text-align: center;
-    color: white;
-    border-radius: 7px;
-    position: relative;
-    float: right;
-}
-
-img.program {
-    border-radius: 7px;
-}
-
-.program_text {
-    margin: 14px;
-    width: 100%;
-}
-
-.program_text h3 {
-    margin: 0 0 1rem 0;
-}
-
-.program_row_container {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	margin: 5vw 1vw;
-}
-
-.program_col_container {
-	display: flex;
-    padding: 0;
-    margin: 0 3rem 3rem;
-    border-radius: 7px;
-    width: 100vw;
-    background: hsla(0, 0%, 96%, 1);
-    box-shadow: hsla(0, 0%, 85%, 1) 1px 3px;
-}
-
-@media screen and (min-width: 1200px) {
-	.program_col_container {
-		width: 44vw;
-	}
-}
-
-.program_col_container a {
-	color: hsla(208, 56%, 41%, 1);
-}
-.program_col_container a:hover {
-	text-decoration: none;
-	color: hsla(208, 56%, 30%, 1);
+    border: 2px solid black;
+    overflow: hidden;
+    margin: 3rem;
 }
 </style>
