--- a/theme/boutique/templates/blocks/productSearch/default.html
+++ b/theme/boutique/templates/blocks/productSearch/default.html
@@ -84,6 +84,7 @@
                                 class="btn btn-default col-xs-4">
                             <span class="glyphicon glyphicon-shopping-cart" ng-if="!content.isProductAdded" aria-hidden="true"></span>
                             <span class="glyphicon glyphicon-ok" ng-if="content.isProductAdded" aria-hidden="true"></span>
+                            {{ searchResultsCrtl.isPublishedd( content ) }}
                         </button>
                         <!--<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> {{ rubedo.translate('Label.AddToCart')}}-->
 
