add link lutte pedophilie

--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -10,8 +10,46 @@
     <a class="capital" href="http://feeds.feedburner.com/actualites-ccn" target="_blank">Flux RSS</a> 
 </div>
 
-<div class="col-xs-12 col-sm-15"><a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a></div>
+<div class="col-xs-12 col-sm-15">
+    <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
+    <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
+</div>
 <div class="col-xs-12 col-sm-15"><a class="capital" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" href="http://docs.chemin-neuf.org" target="_blank">Documentation</a></div>
 <div class="col-xs-12 col-sm-15"><a class="capital" rubedo-page-link="56c1dd9dc445ecdb008b5d89">Contacts</a></div>
 
 </div>
+
+<!-- Modale lutte contre la pédophilie affichée en cliquant sur le link ci-dessus -->
+<div id="modal_lutte_pedophilie" class="modal fade" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+
+                        <h3></h3>
+                
+                        La Communauté du Chemin Neuf s’engage :
+                        <ul>
+                            <li>à lutter sans aucune réserve contre toutes les formes d’abus sexuels ou 
+                            de maltraitance, en particulier lorsqu’ils sont perpétués sur des 
+                            mineurs ou des personnes vulnérables1</li>
+                            <li>à dénoncer tout abus et à observer les législations en vigueur, tant 
+                            civiles que canoniques.</li>
+                            <li>à proposer aux victimes d’abus toute l’attention, l’écoute et 
+                            l’accompagnement requis.</li>
+                            <li>à poursuivre sa mission auprès des enfants et des jeunes qui lui sont 
+                            confiés. Ils ont le droit de trouver dans la Communauté, comme dans 
+                            l’Eglise, une « maison sûre » où ils puissent grandir en humanité comme 
+                            dans leur foi.</li>
+                        </ul>
+
+                        <div style="text-align:center">
+                            Pour télécharger les mesures de lutte contre la pédophilie de la 
+                            Communauté du Chemin Neuf, <a href="">cliquez ici</a>
+                            <br>
+                            <a href="mailto:celluleecoute@chemin-neuf.org" target="_blank">celluleecoute@chemin-neuf.org</a>
+                        </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
