--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -12,7 +12,7 @@
 
 <div class="col-xs-12 col-sm-15">
     <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
-    <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
+    <a class="capital" data-toggle="modal" data-target="#modal_newsletter">Lutte contre la pédophilie</a>
 </div>
 <div class="col-xs-12 col-sm-15"><a class="capital" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" href="http://docs.chemin-neuf.org" target="_blank">Documentation</a></div>
 <div class="col-xs-12 col-sm-15"><a class="capital" rubedo-page-link="56c1dd9dc445ecdb008b5d89">Contacts</a></div>
@@ -25,7 +25,7 @@
             <div class="modal-content">
                 <div class="modal-body">
 
-                        <h3></h3>
+                        <h3>Lutte contre la pédophilie</h3>
                 
                         La Communauté du Chemin Neuf s’engage :
                         <ul>
