add link lutte pedophilie

--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -12,7 +12,7 @@
 
 <div class="col-xs-12 col-sm-15">
     <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
-    <a class="capital" data-toggle="modal" data-target="#modal_newsletter">Lutte contre la pédophilie</a>
+    <a class="capital" href="" style="cursor:pointer" data-toggle="modal" data-target="#modal_lutte_pedophilie">Lutter contre la pédophilie</a>
 </div>
 <div class="col-xs-12 col-sm-15"><a class="capital" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" href="http://docs.chemin-neuf.org" target="_blank">Documentation</a></div>
 <div class="col-xs-12 col-sm-15"><a class="capital" rubedo-page-link="56c1dd9dc445ecdb008b5d89">Contacts</a></div>
@@ -27,7 +27,7 @@
 
                         <h3>Lutte contre la pédophilie</h3>
                 
-                        La Communauté du Chemin Neuf s’engage :
+                        La Communauté du Chemin Neuf s'engage :
                         <ul>
                             <li>à lutter sans aucune réserve contre toutes les formes d’abus sexuels ou 
                             de maltraitance, en particulier lorsqu’ils sont perpétués sur des 
@@ -44,7 +44,7 @@
 
                         <div style="text-align:center">
                             Pour télécharger les mesures de lutte contre la pédophilie de la 
-                            Communauté du Chemin Neuf, <a href="">cliquez ici</a>
+                            Communauté du Chemin Neuf, <a href="">cliquez ici&nbsp;<span class="fa fa-file-pdf-o"></span></a>
                             <br>
                             <a href="mailto:celluleecoute@chemin-neuf.org" target="_blank">celluleecoute@chemin-neuf.org</a>
                         </div>
