--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -25,7 +25,7 @@
             <div class="modal-content">
                 <div class="modal-body">
 
-                        <h3>Lutte contre la pédophilie</h3>
+                        <h3>Lutter contre la pédophilie</h3>
                 
                         La Communauté du Chemin Neuf s'engage :
                         <ul>
@@ -45,7 +45,7 @@
                         <div style="text-align:center">
                             Pour télécharger les mesures de lutte contre la pédophilie de la 
                             Communauté du Chemin Neuf, <a href="">cliquez ici&nbsp;<span class="fa fa-file-pdf-o"></span></a>
-                            <br>
+                            <br><br><br>
                             <a href="mailto:celluleecoute@chemin-neuf.org" target="_blank">celluleecoute@chemin-neuf.org</a>
                         </div>
                     
@@ -53,3 +53,21 @@
             </div>
         </div>
     </div>
+
+    <style>
+    #modal_lutte_pedophilie .modal-body {
+        padding: 7rem;
+    }
+    #modal_lutte_pedophilie h3 {
+        margin-bottom: 5rem;
+    }
+    #modal_lutte_pedophilie ul {
+        margin-left: 2rem;
+    }
+    #modal_lutte_pedophilie a {
+        color: #C1573C;
+    }
+    #modal_lutte_pedophilie a:hover {
+        text-decoration: underline;
+    }
+    </style>
