add link lutte pedophilie

--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -42,9 +42,9 @@
                             dans leur foi.</li>
                         </ul>
 
-                        <div style="text-align:center">
+                        <div class="p2">
                             Pour télécharger les mesures de lutte contre la pédophilie de la 
-                            Communauté du Chemin Neuf, <a href="">cliquez ici&nbsp;<span class="fa fa-file-pdf-o"></span></a>
+                            Communauté du Chemin Neuf, <a href="/dam?media-id=5c06afed396588bf1421c248">cliquez ici&nbsp;<span class="fa fa-file-pdf-o"></span></a>
                             <br><br><br>
                             <a href="mailto:celluleecoute@chemin-neuf.org" target="_blank">celluleecoute@chemin-neuf.org</a>
                         </div>
@@ -57,9 +57,14 @@
     <style>
     #modal_lutte_pedophilie .modal-body {
         padding: 7rem;
+        line-height: 2.3rem;
     }
     #modal_lutte_pedophilie h3 {
         margin-bottom: 5rem;
+    }
+    #modal_lutte_pedophilie .p2 {
+        padding: 2rem;
+        text-align: center;
     }
     #modal_lutte_pedophilie ul {
         margin-left: 2rem;
