fix typo lutte pédophilie

--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -30,8 +30,8 @@
                         La Communauté du Chemin Neuf s'engage :
                         <ul>
                             <li>à lutter sans aucune réserve contre toutes les formes d’abus sexuels ou 
-                            de maltraitance, en particulier lorsqu’ils sont perpétués sur des 
-                            mineurs ou des personnes vulnérables1</li>
+                            de maltraitance, en particulier lorsqu’ils sont perpétrés sur des 
+                            mineurs ou des personnes vulnérables</li>
                             <li>à dénoncer tout abus et à observer les législations en vigueur, tant 
                             civiles que canoniques.</li>
                             <li>à proposer aux victimes d’abus toute l’attention, l’écoute et 
