--- a/theme/wtp17/templates/blocks/form/form_cs.html
+++ b/theme/wtp17/templates/blocks/form/form_cs.html
@@ -267,7 +267,7 @@ The Festival Team.</p>
 	<div class="col-sm-12 col-md-6 padding-large">
 	    <!--QUESTIONS COMPEMENTAIRES-->
 	    <div class="row">
-		<p class="choice-proposition">Doplňkové informace</p>
+		<p class="choice-proposition">Doplňující informace</p>
 	    </div>
 	    <div class="row bg-grey">
 		<div class="col-sm-6 " >
