--- a/theme/cana_org/templates/blocks/ccnMap.html
+++ b/theme/cana_org/templates/blocks/ccnMap.html
@@ -66,8 +66,8 @@
             done: function(map) {
               map.svg.selectAll('.datamaps-subunit').on('click', function(geography) {
                   console.log('geography', geography);
-                  if(map.options.data[geography.id] && map.options.data[geography.id].url) 
-                    window.location.href = map.options.data[geography.id].url;
+                  /* if(map.options.data[geography.id] && map.options.data[geography.id].url) 
+                    window.location.href = map.options.data[geography.id].url; */
               });
             }
            
