--- a/theme/cana_org/templates/blocks/ccnMap.html
+++ b/theme/cana_org/templates/blocks/ccnMap.html
@@ -65,7 +65,7 @@
             },
             done: function(map) {
               map.svg.selectAll('.datamaps-subunit').on('click', function(geography) {
-                  console.log('geography', geography);
+                  console.log('geography', geography, map);
                   /* if(map.options.data[geography.id] && map.options.data[geography.id].url) 
                     window.location.href = map.options.data[geography.id].url; */
               });
