--- a/theme/cana_org/templates/blocks/ccnMap.html
+++ b/theme/cana_org/templates/blocks/ccnMap.html
@@ -19,7 +19,7 @@
     processData = function (countries) {
         var locale = window.location.pathname.split('/')[1];
 
-        countryList = countries;
+        countryList = countries; console.log('countries', countryList);
 
         var width = document.getElementById('map_container').offsetWidth;
         var height = document.getElementById('map_container').offsetHeight; 
