edit 9media social links(

--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -20,17 +20,17 @@
             
         <!-- Liens vers les réseaux sociaux -->
         <ul class="nav navbar-nav menu_social" ng-controller="LanguageMenuController as languageMenuCtrl">
-            <li class="social_link hidden-xs" >
+            <!-- <li class="social_link hidden-xs" >
                 <a rubedo-page-link="5a630da239658886137fcea7"><i class="fa fa-envelope"></i></a>
-            </li>
+            </li> -->
             <!-- <li class="social_link hidden-xs hidden-sm" target="_blank">
                 <a href="https://twitter.com/@9media"><i class="fa fa-twitter"></i></a>
             </li> -->
             <li class="social_link hidden-xs hidden-sm" target="_blank">
-                <a href="https://facebook.com/9media"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/Neufmedia-216780785866835/"><i class="fa fa-facebook"></i></a>
             </li>
             <li class="social_link hidden-xs hidden-sm" target="_blank">
-                <a href="https://youtube.com/9media"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCzkvh3VjnMu-cb6Z4ioBQ1A"><i class="fa fa-youtube"></i></a>
             </li>
         </ul>
     </nav>
