fix css foyer flechedown

--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -146,7 +146,7 @@ width: 90%;
 		bottom: 55px;
 		left:37.5%; width: 25%; color:white; p{font-family: 'trend_sansone'; text-transform: uppercase; opacity: 0.8; text-align: center}
 	}
-		#flecheDown{margin-top:0; bottom: 15px;left:48%;width: 80px; }
+		#flecheDown{margin-top:0; bottom: 15px;left:48%;width: 80px;z-index:1000; }
 		#flecheUp,#flecheUp2{top:15px;left:48%;width:80px;}
 		#flecheRight,	#flecheRight2{right:15px;bottom:48%;width:30px; }
 		#flecheLeft, #flecheLeft2{bottom:48%;width: 30px; margin-left:5px; }
