add ephata in footer

--- a/theme/cte/templates/blocks/footer.html
+++ b/theme/cte/templates/blocks/footer.html
@@ -16,7 +16,8 @@
       <a rubedo-page-link="5b58863d396588a50761755e">Jeunes 18-30 ans</a><br />
       <a rubedo-page-link="5b5f645e396588d76a12aa35">Jeunes professionnels</a><br />
       <!--<a rubedo-page-link="56bc90b9c445ecc61a8b4b4b">JET - Volontariat International</a><br />-->
-      <a rubedo-page-link="56d9c1b7c445ecd2008baee7">Vie spirituelle, retraites et pèlerinages</a><br />
+      <a rubedo-page-link="56d9c1b7c445ecd2008baee7">Vie spirituelle et retraites</a><br>
+      <a rubedo-page-link="56e1b155c445ece7018bcb8a">Séjours et pèlerinages</a><br />
       <a rubedo-page-link="56efff8fc445ec9c218b62bb">Formation</a><br />
    </div>
 
