remove menu link Sejours et vacances

--- a/theme/cte/templates/blocks/footer.html
+++ b/theme/cte/templates/blocks/footer.html
@@ -5,7 +5,7 @@
       <a rubedo-page-link="56e15bf2c445ecc81a8bc0af">Paroisses</a><br />
       <a rubedo-page-link="5760595824564057208c0de7">Abbayes et monastères</a><br />
       <a href="http://foyersetudiants.org/">Foyers d'étudiants</a><br />
-      <a rubedo-page-link="5ab539063965885e3ac61b9f">Séjours & vacances</a><br />
+      <!-- <a rubedo-page-link="5ab539063965885e3ac61b9f">Séjours & vacances</a><br /> -->
       <a rubedo-page-link="5763afea24564068118c2fa8">Dans le monde</a>
    </div>
 
