change actus list css for cana_org

--- a/theme/cana_org/css/cana.less
+++ b/theme/cana_org/css/cana.less
@@ -330,3 +330,14 @@ p.linkbox a, p.linkbox a:hover{color: @grey; text-decoration: none; display: inl
 			margin-left: 68%;
 	}
 }
+
+.actusList .h4 {
+	font-size: 18px;
+  font-weight: bold;
+  font-family: 'Segoe UI';
+  margin-bottom: 2rem;
+}
+
+.actusList p {
+	line-height: 1.7rem;
+}
