change actus list css for cana_org

--- a/theme/cana_org/css/cana.less
+++ b/theme/cana_org/css/cana.less
@@ -331,7 +331,7 @@ p.linkbox a, p.linkbox a:hover{color: @grey; text-decoration: none; display: inl
 	}
 }
 
-.actusList .h4 {
+.actusList h4 {
 	font-size: 18px;
   font-weight: bold;
   font-family: 'Segoe UI';
