add rgpd confidentiality policy

--- a/theme/cte/templates/blocks/footer_links.html
+++ b/theme/cte/templates/blocks/footer_links.html
@@ -14,7 +14,10 @@
     <a class="capital" rubedo-page-link="566554e43bc32599238b4567">Mentions légales</a>
     <a class="capital" href="" style="cursor:pointer" data-toggle="modal" data-target="#modal_lutte_pedophilie">Lutter contre la pédophilie</a>
 </div>
-<div class="col-xs-12 col-sm-15"><a class="capital" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" href="http://docs.chemin-neuf.org" target="_blank">Documentation</a></div>
+<div class="col-xs-12 col-sm-15">
+    <a class="capital" href="/dam?media-id=5cada77739658847463d67dc">Politique de confidentialié</a>
+    <a class="capital" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" href="http://docs.chemin-neuf.org" target="_blank">Documentation</a>
+</div>
 <div class="col-xs-12 col-sm-15"><a class="capital" rubedo-page-link="56c1dd9dc445ecdb008b5d89">Contacts</a></div>
 
 </div>
