--- a/theme/cte/templates/blocks/contentDetail/proposition.html
+++ b/theme/cte/templates/blocks/contentDetail/proposition.html
@@ -222,7 +222,7 @@
 						<div ng-if="(contentDetailCtrl.content.fields.public_service).length>1" class="col-sm-6" ng-init="showTypeServiteurs=false">
 							<div class="button rouge cursor-as-pointer" ng-click="showTypeServiteurs= !showTypeServiteurs" style="margin-bottom:12px" >{{rubedo.translate("Block.Inscription.Inscrire.Service", "S'inscrire au service")}} :</div>
 							        <!--Type de public -->
-							<div ng-if="showTypeServiteurs" ng-repeat="public in contentDetailCtrl.content.fields.public_service track by $index" class="text-center">
+							<div ng-repeat="public in contentDetailCtrl.content.fields.public_service track by $index" class="text-center"><!-- ng-if="showTypeServiteurs" -->
 
 								<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public;contentDetailCtrl.content.service = true; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}}</a></p><!--Attention, ce label dépend du format de type de contenu-->
 							</div>
