--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -138,8 +138,12 @@
             </div>
             <div ng-include="formCtrl.infosFin"></div>
 
-            
 
+            <!-- Accept RGPD -->
+            <div class="row text-center">
+                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-true-value='rgpd_accepted' ng-model='inscription.rgpd'>
+                <label for="accept_rgpd">J'accepte la <a href="/dam?media-id=5cada77739658847463d67dc">politique de confidentialité de la Communauté du Chemin Neuf</a></label>
+            </div>
             
             <div class="row text-center">
                 <div class="button submit" ng-class="{'disabled' : inscription_form.$invalid}" ng-click="formCtrl.setCurrentStage(6,inscription_form.$valid)" ng-if="!processForm && !finInscription">{{rubedo.translate("Block.Inscription.Valider","S'inscrire")}}</div><!----inscription_form.$valid)-->
