add checkbox rgpd for inscriptions

--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -141,7 +141,7 @@
 
             <!-- Checkbox accept RGPD -->
             <div class="row text-center">
-                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-true-value='rgpd_accepted' ng-model='inscription.rgpd' required>
+                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model='inscription.rgpd' required>
                 <label for="accept_rgpd">J'accepte la <a href="/dam?media-id=5cada77739658847463d67dc">politique de confidentialité de la Communauté du Chemin Neuf</a></label>
             </div>
             
