--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -142,7 +142,7 @@
             <!-- Checkbox accept RGPD -->
             <div class="row text-center">
                 <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model='inscription.rgpd' required>
-                <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "J'accepte")}} <a ng-href="/dam?media-id={{inscription.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "la politique de confidentialité de la Communauté du Chemin Neuf")}}</a></label>
+                <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "J'accepte")}} <a ng-href="/dam?media-id={{parameters.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "la politique de confidentialité de la Communauté du Chemin Neuf")}}</a></label>
             </div>
             
             <!-- Bouton de soumission du formulaire d'inscription -->
