--- a/theme/bethanien/templates/blocks/inscription.html
+++ b/theme/bethanien/templates/blocks/inscription.html
@@ -139,7 +139,12 @@
             <div ng-include="formCtrl.infosFin"></div>
 
             
-
+            <!-- Checkbox accept RGPD -->
+            <div class="row text-center">
+                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model='inscription.rgpd' required>
+                <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "I accept")}} <a target="_blank" ng-href="/dam?media-id={{parameters.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "the privacy policy of the Chemin Neuf community")}}</a></label>
+            </div>
+            
             
             <div class="row text-center">
                 <div class="button submit" ng-class="{'disabled' : inscription_form.$invalid}" ng-click="formCtrl.setCurrentStage(6,inscription_form.$valid)" ng-if="!processForm && !finInscription">{{rubedo.translate("Block.Inscription.Valider","S'inscrire")}}</div><!----inscription_form.$valid)-->
