debug jwplayer not working with youtube

--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="/theme/netforgod/js/jwplayer7.js"></script>
 <div class="bg-degrade">
 	<div class="container">
 		<div class="row padding-large">
