--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -1,5 +1,4 @@
-<!-- <script type="text/javascript" src="/theme/netforgod/js/jwplayer7.js"></script>-->
-<script type="text/javascript" src="/theme/netforgod/js/jwplayer.controls7.js"></script> 
+<script type="text/javascript" src="/theme/netforgod/js/jwplayer7.js"></script>
 
 <div class="bg-degrade">
 	<div class="container">
