--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -26,10 +26,14 @@
 		</div>
 		<div class="row padding-large" ng-if="contentDetailCtrl.watch !='no' ">
 			<div class="col-sm-12">
+
+				<!-- boutons regarder film / trailer -->
 				<div class="film-controls" >
 					<p><span class="hidden-xxs">{{rubedo.translate('NFG.Watch','Watch')}}</span><span ng-if="fieldEntity['filmYT']"  ng-class="{'active':contentDetailCtrl.watch =='film' }" ng-click="contentDetailCtrl.watch = 'film' ">film </span>
 						<span ng-if="fieldEntity['trailer'] && fieldEntity['trailer'].url!='' " ng-class="{'active':contentDetailCtrl.watch =='trailer' }" ng-click="contentDetailCtrl.watch = 'trailer' ">trailer</span></p>
 				</div>
+
+				<!-- fenêtre principale de la vidéo -->
 				<div ng-if="contentDetailCtrl.watch =='film'">
 					<div  ng-init = "field = contentDetailCtrl.getFieldByName('filmYT')">
 						<div ng-controller="RECFieldFilmController as recCtrl" >
@@ -48,9 +52,31 @@
 					</div>
 		
 				</div>
+
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
-					<jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer>
+					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
+					<div id="ytplayer"></div>
+					<script>
+						// Load the IFrame Player API code asynchronously.
+						var tag = document.createElement('script');
+						tag.src = "https://www.youtube.com/player_api";
+						var firstScriptTag = document.getElementsByTagName('script')[0];
+						firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+						// Replace the 'ytplayer' element with an <iframe> and
+						// YouTube player after the API code downloads.
+						var player;
+						function onYouTubePlayerAPIReady() {
+							player = new YT.Player('ytplayer', {
+							height: '360',
+							width: '640',
+							videoId: 'M7lc1UVf-VE'
+							});
+						}
+					</script>
 				</div>
+
+				<!-- boutons partager / devenir volontaire etc. -->
 				<div class="film-socials">
 					<div class="col-sm-3 col-xs-6 col-xxs-12 text-left">
 						<p>{{rubedo.translate('NFG.Like','If you like this film')}}</p>
