--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -59,7 +59,8 @@
 					<script>
 						// Load the IFrame Player API code asynchronously.
 						var tag = document.createElement('script');
-						tag.src = "https://www.youtube.com/player_api";
+						tag.src = fieldEntity['trailer'].url;
+						console.log('fieldEntity', fieldEntity);
 						var firstScriptTag = document.getElementsByTagName('script')[0];
 						firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
