--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -59,7 +59,7 @@
 					<script>
 						// Load the IFrame Player API code asynchronously.
 						var tag = document.createElement('script');
-						tag.src = fieldEntity['trailer'].url;
+						tag.src = 'https://www.youtube.com/watch?v=qGUuzWeJOQc'; //fieldEntity['trailer'].url;
 						console.log('fieldEntity', me, contentDetailCtrl);
 						var firstScriptTag = document.getElementsByTagName('script')[0];
 						firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
