--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -60,7 +60,7 @@
 						// Load the IFrame Player API code asynchronously.
 						var tag = document.createElement('script');
 						tag.src = 'https://www.youtube.com/watch?v=qGUuzWeJOQc'; //fieldEntity['trailer'].url;
-						console.log('fieldEntity', me, contentDetailCtrl);
+						console.log('fieldEntity', contentDetailCtrl);
 						var firstScriptTag = document.getElementsByTagName('script')[0];
 						firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
